<resources>
    <string name="app_name">GoogleMapPlaceDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_image">Add Image</string>
    <string name="save">Save</string>
    <string name="et_title_hint">Title</string>
    <string name="et_description_hint">Description</string>
    <string name="et_date_hint">Date</string>
    <string name="et_location_hint">Location</string>
</resources>