<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddPlaceFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_add_place"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Add Place"
        android:background="@color/colorPrimary"
        android:theme="@style/CustomToolbarStyle"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/scrollView_add_placeFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add_place"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLayout_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="@dimen/edit_text_layout_marginHorizontal"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_title_hint"
                    android:inputType="textCapWords"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/et_text_size"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLayout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etLayout_title"
                android:layout_marginHorizontal="@dimen/edit_text_layout_marginHorizontal"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_description_hint"
                    android:inputType="textCapWords"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/et_text_size"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLayout_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etLayout_description"
                android:layout_marginHorizontal="@dimen/edit_text_layout_marginHorizontal"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_date_hint"
                    android:inputType="textCapWords"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/et_text_size"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLayout_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etLayout_date"
                android:layout_marginHorizontal="@dimen/edit_text_layout_marginHorizontal"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_location_hint"
                    android:inputType="textCapWords"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/et_text_size"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_placeHolder"
                android:layout_width="@dimen/add_screen_place_image_size"
                android:layout_height="@dimen/add_screen_place_image_size"
                android:layout_marginTop="@dimen/add_screen_place_image_marginTop"
                android:background="@drawable/shape_image_view_border"
                android:padding="@dimen/add_screen_place_image_padding"
                android:scaleType="centerCrop"
                android:src="@drawable/add_screen_place_image_placeholder"
                app:layout_constraintStart_toStartOf="@id/etLayout_location"
                app:layout_constraintTop_toBottomOf="@id/etLayout_location"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/tv_add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/add_image"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/tv_add_image_textSize"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/iv_placeHolder"
                app:layout_constraintStart_toEndOf="@id/iv_placeHolder"
                app:layout_constraintTop_toTopOf="@id/iv_placeHolder"
                tools:ignore="TextContrastCheck" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iv_placeHolder"
                android:background="@drawable/button_border_shape_rounded"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="@dimen/button_marginHorizontal"
                android:text="@string/save"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textStyle="bold"
                android:textSize="@dimen/button_textSize"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>